Changing email address & add link to the logo

--- a/_data/details.yml
+++ b/_data/details.yml
@@ -2,7 +2,7 @@ contact:
   - name : "Phone"
     value: "+44 7493 84 94 28"
   - name : "Email"
-    value: "silviuglv@gmail.com"
+    value: "hello@wwawesome.com"
 
 social:
   - icon: "fa-facebook"
