update fb username

--- a/_data/details.yml
+++ b/_data/details.yml
@@ -6,7 +6,7 @@ contact:
 
 social:
   - icon: "fa-facebook"
-    link: "https://www.facebook.com/wwawesome.agency"
+    link: "https://www.facebook.com/wwawesomeuk"
   - icon: "fa-instagram"
     link: "#"
   - icon: "fa-twitter"
