First landing page

--- a/_data/links.yml
+++ b/_data/links.yml
@@ -1,6 +1,4 @@
-- name: "test"
-  link: "#about"
-- name: "special offers"
-  link: "#offers"
-- name: "contact us"
-  link: "#contact"
+- name: "Say hello@wwawesome.com!"
+  link: "mailto:hello@wwawesome.com"
+- name: "+44 7493 849428"
+  link: "tel:+447493849428"
