--- a/_config.yml
+++ b/_config.yml
@@ -13,8 +13,8 @@
 # you will see them accessed via {{ site.title }}, {{ site.email }}, and so on.
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
-title: WW aWesome | Creative web agency
-email: silviuglv@gmail.com
+title: ww awesome | Creative web studio
+email: hello@wwawesome.com
 description: >- # this means to ignore newlines until "baseurl:"
   Looking for fantastic web site design in North West? WW aWesome is a small web development agency based in Liverpool!
 baseurl: "" # the subpath of your site, e.g. /blog
